# noxen

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: test.yml
agent/: script_bundle.js  system_server_bundle.js
config/: hooks.json
scripts/: sync-runtime-assets.js
src/noxen/: __main__.py  agent_loader.py  analysis.py  app.py  commands.py  db.py  exporting.py  filters.py  frida_devices.py  frida_session.py  intent_mods.py  logging_ui.py  modals.py  noxen.tcss  rendering.py  settings.py  system_server_session.py  textual_compat.py
src/noxen/runtime/agent/: script.js  system_server.js
tests/: test_agent_loader.py  test_app_layout.py  test_app_lifecycle.py  test_command_bar_visibility.py  test_command_catalog.py  test_connect_device_loading.py  test_exporting.py  test_filters_settings_db.py  test_frida_devices.py  test_frida_session.py  test_intent_mods.py  test_logging_ui.py  test_rendering.py  test_system_server_session.py
